--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,22 @@
-.env
+
 node_modules/
+
+
+.env
+.env.local
+.env*.local
+
+
+logs
+*.log
+npm-debug.log*
+
+
+.idea
+.vscode
+*.swp
+*.swo
+
+
+dist
+build
